More SVG cleanup

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
   <title>Style Tiles SVG Viewer</title>
+  <style>
+    /* Double width of body to allow for side by side images */
+    body {
+      width: 200%;
+    }
+  </style>
 </head>
 <body>
   <img src="template.svg" alt="Style Tiles Template"/>
+  <img src="template.png" alt="Style Tiles Template"/>
 
   <!-- Watch files for a dynamic reload -->
   <script src="https://raw.github.com/twolfson/File-Watcher/master/src/watcher.js"></script>
