--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     /* Double width of body to allow for side by side images */
     body {
-      width: 200%;
+      width: 2400px;
     }
   </style>
 </head>
