--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <title>Style Tiles SVG Viewer</title>
   <style>
     /* Double width of body to allow for side by side images */
-    body {
+    /*body {
       width: 2400px;
-    }
+    }*/
   </style>
 </head>
 <body>
   <img src="template.svg" alt="Style Tiles Template"/>
-  <img src="template.png" alt="Style Tiles Template"/>
+  <!-- <img src="template.png" alt="Style Tiles Template"/> -->
 
   <!-- Watch files for a dynamic reload -->
   <script src="https://raw.github.com/twolfson/File-Watcher/master/src/watcher.js"></script>
