Commented out file watcher

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- <img src="template.png" alt="Style Tiles Template"/> -->
 
   <!-- Watch files for a dynamic reload -->
-  <script src="https://raw.github.com/twolfson/File-Watcher/master/src/watcher.js"></script>
+  <!-- <script src="https://raw.github.com/twolfson/File-Watcher/master/src/watcher.js"></script>
   <script>
     var watcher = new FileWatcher();
     watcher.addListener(function () {
       location.reload();
     });
     watcher.watch(['/', '/template.svg']);
-  </script>
+  </script> -->
 </body>
 </html>
